# urirun-connector-time-tools

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  local.dev.txt  pyproject.toml
.github/workflows/: ci.yml  docs-lint.yml  integration-urirun-llm.yml
docker/: Dockerfile  run-smoke.sh
examples/: README.md  quickstart.sh
scripts/: ci_urirun_llm_smoke.py
tests/: test_time_tools.py
urirun_connector_time_tools/: __init__.py  cli.py  connector.manifest.json  contracts.py  core.py
