[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-time-tools"
version = "0.1.2"
description = "Time Tools connector for ifuri and urirun"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = [
  "urirun @ git+https://github.com/if-uri/urirun.git@v0.3.14#subdirectory=adapters/python",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://connect.ifuri.com/connectors/time-tools"
Repository = "https://github.com/if-uri/urirun-connector-time-tools"

[project.scripts]
urirun-time-tools = "urirun_connector_time_tools.cli:main"

[project.entry-points."urirun.bindings"]
time-tools = "urirun_connector_time_tools:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_time_tools*"]

[tool.setuptools.package-data]
urirun_connector_time_tools = ["connector.manifest.json"]
